force-app/main/objects/India_GST__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Transfer_Status__c</fullName>
        <formula>TEXT(Account__r.SFDC2SUN_TransferStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Transfer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>India_GST</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>TEXT(Account__r.BU__c)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_in_SUN_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is marked checked when the record is closed in the SUN System in the sync process</description>
        <label>Closed in SUN System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Codice_Destinatario_Univeco__c</fullName>
        <label>Codice Destinatario/Univeco</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Fiscali__c</fullName>
        <label>Codice Fiscali</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Address &amp; Tax Information</relationshipLabel>
        <relationshipName>Address_Tax_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                    <default>true</default>
                    <label>India</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_text__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Country_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITN__c</fullName>
        <displayFormat>ITN{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>ITN</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ITN_formula__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id ,ITN__c,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Home_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Home Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Transfer__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <inlineHelpText>Please select &apos;Yes&apos; if you have manually created the GST record in Infor10 after an automatic transfer failure. Can only be updated for transferring and failed transfers.</inlineHelpText>
        <label>Manually Transferred</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State_County__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Status_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_County__c</fullName>
        <label>State/County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Global_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_County_text__c</fullName>
        <label>State/County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <label>SFDC2SUN: Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Sync</fullName>
                </value>
                <value>
                    <fullName>Out of Sync</fullName>
                </value>
                <value>
                    <fullName>Synced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxpayer_Type__c</fullName>
        <label>Taxpayer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EXPWOP</fullName>
                    <label>External Sales without tax (EXPWOP)</label>
                </value>
                <value>
                    <fullName>EXPWP</fullName>
                    <label>External sale with tax (EXPWP)</label>
                </value>
                <value>
                    <fullName>SEZWOP</fullName>
                    <label>Sales to Special Economic Zone without tax (SEZWOP)</label>
                </value>
                <value>
                    <fullName>SEZWP</fullName>
                    <label>Sales to Special Economic Zone with tax (SEZWP)</label>
                </value>
                <value>
                    <fullName>B2B</fullName>
                    <label>Sales to customer in India not in SEZ (B2B)</label>
                </value>
                <value>
                    <fullName>URP</fullName>
                    <label>Unregistered person (URP)</label>
                </value>
                <value>
                    <fullName>B2C</fullName>
                    <isActive>false</isActive>
                    <label>Sale to end consumer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Status__c</fullName>
        <label>SFDC2SUN: Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Ready for Transfer</fullName>
                    <default>true</default>
                    <label>Ready for Transfer</label>
                </value>
                <value>
                    <fullName>Not Transferred</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>VAT</fullName>
                </value>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
                <value>
                    <fullName>PAN</fullName>
                </value>
                <value>
                    <fullName>TAN</fullName>
                </value>
                <value>
                    <fullName>Headquarters Address</fullName>
                </value>
                <value>
                    <fullName>Home Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZIP_Postal_Code__c</fullName>
        <label>ZIP/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_text__c</fullName>
        <label>Account</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Address &amp; Tax Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address_Line_1__c</columns>
        <columns>City__c</columns>
        <columns>State_County__c</columns>
        <columns>Account__c</columns>
        <columns>Country__c</columns>
        <columns>ITN_formula__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Transfer_Status__c</columns>
        <columns>Manual_Transfer__c</columns>
        <columns>Account_Transfer_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address &amp; Tax Information</pluralLabel>
    <recordTypes>
        <fullName>Address</fullName>
        <active>true</active>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax</fullName>
        <active>true</active>
        <label>Tax</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>First_2_GST_Number_digit_will_be_number</fullName>
        <active>true</active>
        <description>First_2_GST_Number_digit_will_be_number</description>
        <errorConditionFormula>IF(AND(Name &lt;&gt; &apos;Outside of India&apos;, Name &lt;&gt; &apos;URP&apos; ,  TEXT(Global_Country__c) = &apos;INDIA&apos;), NOT(ISNUMBER(LEFT( Name , 2) ) ), false) &amp;&amp;  RecordType.DeveloperName=&apos;Tax&apos; &amp;&amp;  TEXT(Type__c)=&apos;GST&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>First two characters of GST Identification Number should be numerical.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GST_Identification_Number_State_Code</fullName>
        <active>true</active>
        <description>GST Identification Number first 2 digits  should be same as of State Code.</description>
        <errorConditionFormula>AND(TEXT(State_Code__c) &lt;&gt; LEFT(Name, 2), NOT(Name = &apos;Outside of India&apos;), NOT(Name = &apos;URP&apos;),TEXT( Global_Country__c )=&apos;INDIA&apos;)&amp;&amp; RecordType.DeveloperName=&apos;Tax&apos; &amp;&amp; TEXT(Type__c)=&apos;GST&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>The first two digits of GST Identification Number should be same as of the State Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GST_Identification_Number_of_15_digit</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(LEN(Name )&lt;&gt; 15, Name &lt;&gt; &apos;Outside of India&apos;, Name &lt;&gt; &apos;URP&apos;,TEXT( Global_Country__c )= &apos;INDIA&apos; ) , true, false)&amp;&amp; RecordType.DeveloperName=&apos;Tax&apos; &amp;&amp; TEXT(Type__c)=&apos;GST&apos;</errorConditionFormula>
        <errorMessage>The GST Identification Number should have 15 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manually_Transferred_unchecked_on_create</fullName>
        <active>false</active>
        <description>Manually Transferred cannot be yes on creation of GST record.</description>
        <errorConditionFormula>(ISNEW() &amp;&amp;  ISPICKVAL(Manual_Transfer__c , &apos;Yes&apos;) ) 
||
(ISPICKVAL(Manual_Transfer__c , &apos;Yes&apos;) &amp;&amp; OR(ISPICKVAL( Transfer_Status__c,&apos;Transferred&apos;),ISPICKVAL( Transfer_Status__c,&apos;On Hold&apos;)))</errorConditionFormula>
        <errorMessage>Manually Transferred cannot be set to &apos;Yes&apos; while creating a new GST record OR when the &apos;Automatic Transfer Status&apos; is in &apos;Transferred&apos; or &apos;On Hold&apos; status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_cannot_be_more_than_15_char</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name)&gt;15</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Only 15 digits/characters allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_code_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( TEXT( State_Code__c ) ),TEXT( Global_Country__c )=&apos;INDIA&apos;) &amp;&amp; TEXT(Type__c)&lt;&gt;&apos;Home Address&apos;</errorConditionFormula>
        <errorDisplayField>State_Code__c</errorDisplayField>
        <errorMessage>State code is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( TEXT(State_County__c) ),TEXT( Global_Country__c )=&apos;INDIA&apos;)</errorConditionFormula>
        <errorDisplayField>State_County__c</errorDisplayField>
        <errorMessage>State/County is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>URP_or_Outside_of_India_on_non_IN1_Acc</fullName>
        <active>true</active>
        <description>Cannot create URP or Outside of India on non-IN1 accounts</description>
        <errorConditionFormula>AND(OR(Name == &apos;Outside of India&apos;, Name == &apos;URP&apos;), NOT(ISPICKVAL(Account__r.BU__c, &apos;India - IN1&apos;) ))</errorConditionFormula>
        <errorMessage>You cannot create a URP or Outside of India GST record on non-IN1 accounts</errorMessage>
    </validationRules>
</CustomObject>